fixed: element alignment and burger menu transition, padding. Light scheme commented out.

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@
     --border-radius-2: 0.5rem;
     --border-radius-3: 0.75rem;
 
+    /* Light scheme commented out.
     @media (prefers-color-scheme: light) {
       --text-main: var(--clr-brown-700);
       --text-high-contrast: var(--clr-brown-900);
@@ -163,7 +164,7 @@
       --background-main: var(--clr-brown-300);
       --background-dark: var(--clr-brown-400);
       --background-extra-dark: var(--clr-brown-500);
-    }
+    }*/
   }
 
   html {
@@ -253,7 +254,7 @@
       --equal-columns-gap: 2rem;
     }
 
-    &[data-aligment="centered"] {
+    &[data-alignment="centered"] {
       --equal-columns-vertical-alignment: center;
     }
   }
@@ -373,34 +374,38 @@
       z-index: 10;
       top: 0;
       right: 0;
-      font-size: var(--font-size-lg);
-      font-weight: 700;
-      font-family: var(--ff-heading);
+
       background-color: var(--background-accent-main);
       padding: 2rem;
       border-radius: 0 0 0 var(--border-radius-3);
 
       ul {
-        gap: 0;
         flex-direction: column;
+        gap: 0;
+        font-size: var(--fs-700);
+        font-weight: 700;
+        font-family: var(--ff-heading);
       }
 
       li {
-        --delay: 1s;
-        translate: 50%;
-        transition: translate 1s var(--delay) opacity 1s var(--delay);
-      }
+        translate: 0;
+        opacity: 1;
 
-      li:nth-child(2) {
-        --delay: 1.25s;
-      }
-      li:nth-child(3) {
-        --delay: 1.5s;
+        transition: opacity 300ms, translate 875ms;
+        transition-delay: var(--delay, 125ms);
+
+        &:nth-child(2) {
+          --delay: 250ms;
+        }
+
+        &:nth-child(3) {
+          --delay: 325ms;
+        }
       }
 
       li + li {
-        margin-block-start: 1.5rem;
-        padding-block: 1.5rem;
+        margin-block-start: 1rem;
+        padding-top: 1rem;
         border-top: 2px solid var(--background-accent-light);
       }
     }
@@ -418,16 +423,15 @@
 
       @starting-style {
         opacity: 0;
-        translate: 0 -100%;
       }
 
       li {
-        translate: 0 0;
+        translate: 0;
         opacity: 1;
 
         @starting-style {
           opacity: 0;
-          translate: 50% 0;
+          translate: 100%;
         }
       }
     }
